k8s/minio-tenants/overlays/essentia/ingress-console.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: essentia-minio-console
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-dns01
    traefik.ingress.kubernetes.io/router.middlewares: authentik-authentik-forwardauth@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - minio.essentia.json-server.win
      secretName: essentia-minio-console-tls
  rules:
    - host: minio.essentia.json-server.win
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: minio-console
                port:
                  number: 9090
